--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -12,7 +12,7 @@
 				<table class="table">
 					<tr>
 						<th><h5>Items: <strong>{{order.get_cart_item}}</strong></h5></th>
-						<th><h5>Total:<strong> ${{order.get_cart_total}}</strong></h5></th>
+						<th><h5>Total:<strong> ${{order.get_cart_total|floatformat:2}}</strong></h5></th>
 						<th>
 							<a  style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Checkout</a>
 						</th>
@@ -29,6 +29,7 @@
 					<div style="flex:1"><strong>Price</strong></div>
 					<div style="flex:1"><strong>Quantity</strong></div>
 					<div style="flex:1"><strong>Total</strong></div>
+					<div style="flex:1"><strong>Action</strong></div>
 				</div>
 				{% for item in items%}
 				<div class="cart-row">
@@ -44,6 +45,9 @@
 						</div>
 					</div>
 					<div style="flex:1"><p>${{item.get_total|floatformat:2}}</p></div>
+					<div style="flex: 1">
+						<button data-product={{item.product.id}} data-action="delete" class="btn btn-danger update-cart" >x</button>
+					</div>
 				</div>
 				{%endfor%}
 			</div>
