--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -1,69 +1,145 @@
 {% extends 'store/main.html' %}
 {% load static %}
 {% block content %}
-     <div class="row">
-		<div class="col-lg-6">
-			<div class="box-element" id="form-wrapper">
-				<form id="form">
-					<div id="user-info">
-						<div class="form-field">
-							<input required class="form-control" type="text" name="name" placeholder="Name..">
-						</div>
-						<div class="form-field">
-							<input required class="form-control" type="email" name="email" placeholder="Email..">
-						</div>
-					</div>
-					
-					<div id="shipping-info">
-						<hr>
-						<p>Shipping Information:</p>
-						<hr>
-						<div class="form-field">
-							<input class="form-control" type="text" name="address" placeholder="Address..">
-						</div>
-						<div class="form-field">
-							<input class="form-control" type="text" name="city" placeholder="City..">
-						</div>
-						<div class="form-field">
-							<input class="form-control" type="text" name="state" placeholder="State..">
-						</div>
-						<div class="form-field">
-							<input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
-						</div>
-						<div class="form-field">
-							<input class="form-control" type="text" name="country" placeholder="Zip code..">
-						</div>
-					</div>
+<div class="row">
+    <div class="col-lg-6">
+        <div class="box-element" id="form-wrapper">
+            <form id="form">
+                <div id="user-info">
+                    <div class="form-field">
+                        <input required class="form-control" type="text" name="name" value="" placeholder="Name..">
+                    </div>
+                    <div class="form-field">
+                        <input required class="form-control" type="email" name="email" value="" placeholder="Email..">
+                    </div>
+                </div>
+                <div id="shipping-info">
+                    <hr>
+                    <p>Shipping Information:</p>
+                    <hr>
+                    <div class="form-field">
+                        <input class="form-control" type="text" name="address" value="" placeholder="Address..">
+                    </div>
+                    <div class="form-field">
+                        <input class="form-control" type="text" name="city" value="" placeholder="City..">
+                    </div>
+                    <div class="form-field">
+                        <input class="form-control" type="text" name="state" value="" placeholder="State..">
+                    </div>
+                    <div class="form-field">
+                        <input class="form-control" type="text" name="zipcode"  value="" placeholder="Zip code..">
+                    </div>
+                </div>
+                <hr>
+                <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
+            </form>
+        </div>
+        <br>
+        <div class="box-element hidden" id="payment-info">
+            <small>Paypal Options</small>
+            <button class="btn btn-success btn-block" id="make-payment">Make Payment</button>
+        </div>
+    </div>
+    <div class="col-lg-6">
+        <div class="box-element">
+            <a class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Back to Cart</a>
+            <hr>
+            <h3>Order Summary</h3>
+            <hr>
+            {% for item in items%}
+            <div class="cart-row">
+                <div style="flex:2"><img class="row-image" src="{{item.product.imageUrl}}"></div>
+                <div style="flex:2">
+                    <p>{{item.product.name}}</p>
+                </div>
+                <div style="flex:1">
+                    <p>${{item.product.price|floatformat:2}}</p>
+                </div>
+                <div style="flex:1">
+                    <p>{{item.quantity}}</p>
+                </div>
+            </div>
+            {%endfor%}
+            <h5>Items: {{order.get_cart_item}}</h5>
+            <h5>Total: ${{order.get_cart_total}}</h5>
+        </div>
+    </div>
+</div>
+<script type="text/javascript">
+var shipping = '{{order.shipping}}'
+var total = '{{order.get_cart_total}}'
 
-					<hr>
-					<input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
-				</form>
-			</div>
+if (shipping == 'False') {
+    document.getElementById('shipping-info').innerHTML = ''
+}
+if (user != 'AnonymousUser') {
+    document.getElementById('user-info').innerHTML = ''
+}
+if (shipping == 'False' & user != 'AnonymousUser') {
+    document.getElementById('form-wrapper').classList.add('hidden')
+    document.getElementById('payment-info').classList.remove('hidden')
+}
 
-			<br>
-			<div class="box-element hidden" id="payment-info">
-				<small>Paypal Options</small>
-			</div>
-			
-		</div>
+var form = document.getElementById('form')
 
-		<div class="col-lg-6">
-			<div class="box-element">
-				<a  class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Back to Cart</a>
-				<hr>
-				<h3>Order Summary</h3>
-				<hr>
-				{% for item in items%}
-				<div class="cart-row">
-					<div style="flex:2"><img class="row-image" src="{{item.product.imageUrl}}"></div>
-					<div style="flex:2"><p>{{item.product.name}}</p></div>
-					<div style="flex:1"><p>${{item.product.price|floatformat:2}}</p></div>
-					<div style="flex:1"><p>{{item.quantity}}</p></div>
-				</div>
-				{%endfor%}
-				<h5>Items:   {{order.get_cart_item}}</h5>
-				<h5>Total:   ${{order.get_cart_total}}</h5>
-			</div>
-		</div>
-	</div>
+form.addEventListener('submit', function(e) {
+    e.preventDefault()
+    document.getElementById('form-button').classList.add('hidden')
+    document.getElementById('payment-info').classList.remove('hidden')
+})
+
+document.getElementById('make-payment').addEventListener('click', function() {
+    submitFormData();
+});
+
+function submitFormData() {
+
+    console.log("data submmitted")
+    var userFormData = {
+        'name': null,
+        'email': null,
+        'total': total
+    }
+
+    var shippingInfo = {
+        'address': null,
+        'city': null,
+        'state': null,
+        'zipcode': null,
+    }
+
+    if (shipping != 'False') {
+        shippingInfo.address = form.address.value
+        shippingInfo.city = form.city.value
+        shippingInfo.zipcode = form.zipcode.value
+    }
+    if (user == 'AnonymousUser') {
+        userFormData.name = form.name.value
+        userFormData.email = form.email.value
+    }
+
+    var url = '/process_order/'
+    fetch(url,{
+        method:'POST',
+        headers:{
+            'Content-Type':'application/json',
+            'X-CSRFToken':csrftoken,
+        },
+            body: JSON.stringify({'form': userFormData, 'shipping': shippingInfo})
+        })
+        .then((response) => {
+            return response.json()
+        })
+        .then((data) => {
+            console.log(data)
+            alert("Order Completed")
+            // location.reload()
+ 			window.location.href = "{% url 'store' %}"
+
+        })
+
+
+
+}
+</script>
 {% endblock content %}
